[gd_scene load_steps=3 format=3 uid="uid://c57qcdq27nifu"]

[ext_resource type="Script" uid="uid://clbxgwt7eq7jg" path="res://scripts/view_fases.gd" id="1_f16q7"]

[sub_resource type="ViewportTexture" id="ViewportTexture_tn05k"]

[node name="Fases" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f16q7")

[node name="background_view_fases" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_tn05k")
expand_mode = 2

[node name="Container_maior" type="MarginContainer" parent="background_view_fases"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container_vertical" type="HBoxContainer" parent="background_view_fases/Container_maior"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Container_horizontal" type="VBoxContainer" parent="background_view_fases/Container_maior/Container_vertical"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="btn_voltar_view_fases" type="Button" parent="background_view_fases/Container_maior/Container_vertical/Container_horizontal"]
layout_mode = 2
text = "Voltar"

[node name="Container_fases" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -356.0
offset_right = 356.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 100
columns = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Container_fases"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Container_fases/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="pontuacaoFase1" type="RichTextLabel" parent="Container_fases/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="fase1" type="RichTextLabel" parent="Container_fases/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Os movimentos são essenciais para um percurso."
fit_content = true
scroll_active = false

[node name="btnFase1" type="Button" parent="Container_fases/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "MOVIMENTO"

[node name="HBoxContainer2" type="HBoxContainer" parent="Container_fases"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Container_fases/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="pontuacaoFase2" type="RichTextLabel" parent="Container_fases/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="fase2" type="RichTextLabel" parent="Container_fases/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Condição e essencial para verificação de uma entrada"
fit_content = true
scroll_active = false

[node name="btn_condições" type="Button" parent="Container_fases/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "CONDIÇÃO"

[node name="HBoxContainer3" type="HBoxContainer" parent="Container_fases"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Container_fases/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="pontuacaoFase3" type="RichTextLabel" parent="Container_fases/HBoxContainer3/VBoxContainer"]
layout_mode = 2

[node name="fase3" type="RichTextLabel" parent="Container_fases/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Repetições são essencias para reutilização de código"
fit_content = true
scroll_active = false

[node name="btn_repetições" type="Button" parent="Container_fases/HBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "REPETIÇÃO"

[node name="HBoxContainer4" type="HBoxContainer" parent="Container_fases"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Container_fases/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="pontuacaoFase4" type="RichTextLabel" parent="Container_fases/HBoxContainer4/VBoxContainer"]
layout_mode = 2

[node name="fase4" type="RichTextLabel" parent="Container_fases/HBoxContainer4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Funções são essenciais para construir código"
fit_content = true
scroll_active = false

[node name="btn_funções" type="Button" parent="Container_fases/HBoxContainer4/VBoxContainer"]
layout_mode = 2
text = "FUNÇÕES"

[connection signal="pressed" from="background_view_fases/Container_maior/Container_vertical/Container_horizontal/btn_voltar_view_fases" to="." method="_on_label_pressed"]
[connection signal="pressed" from="Container_fases/HBoxContainer/VBoxContainer/btnFase1" to="." method="_on_btn_movimento_pressed"]
[connection signal="pressed" from="Container_fases/HBoxContainer/VBoxContainer/btnFase1" to="." method="_on_btn_fase_1_pressed"]
[connection signal="button_down" from="Container_fases/HBoxContainer2/VBoxContainer/btn_condições" to="." method="_on_btn_condições_button_down"]
[connection signal="pressed" from="Container_fases/HBoxContainer3/VBoxContainer/btn_repetições" to="." method="_on_btn_repetições_pressed"]
[connection signal="button_down" from="Container_fases/HBoxContainer4/VBoxContainer/btn_funções" to="." method="_on_btn_funções_button_down"]
